<resources>
    <string name="app_name">Audio Spectrum</string>
    <string name="settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">General</string>
    <string name="units_title">Unit in spectrogram</string>
    <string name="freq_sampling">Sampling rate in Hz</string>
    <string name="window">FFT window size</string>
    <string name="time">Time to show in seconds</string>
    <!-- Sync Preferences -->
    <string name="umbral">Threshold:</string>
    <string name="gray_scale">Gray scale</string>
    <string name="fmean">Mean Frequency</string>
    <string name="msg">Touch the screen to start or stop processing</string>
</resources>