<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <ListPreference
            app:defaultValue="kHz"
            app:entries="@array/units"
            app:entryValues="@array/units"
            app:key="units"
            app:title="@string/units_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="11025"
            app:entries="@array/freqs"
            app:entryValues="@array/freqs"
            app:key="fs"
            app:title="@string/freq_sampling"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="512"
            app:entries="@array/windows"
            app:entryValues="@array/windows"
            app:key="window"
            app:title="@string/window"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="4"
            app:entries="@array/times"
            app:entryValues="@array/times"
            app:key="time"
            app:title="@string/time"
            app:useSimpleSummaryProvider="true" />
        <CheckBoxPreference
            app:defaultValue="false"
            app:key="gray"
            app:title="@string/gray_scale" />
    </PreferenceCategory>


</PreferenceScreen>